--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
 <IfModule mod_rewrite.c>
   RewriteEngine On
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule ^(.*)$ index.php?/$1 [L]
+  RewriteRule ^home$ index.php [QSA,L]
+  RewriteRule ^([^/.]+)$ index.php/$1 [QSA,L]
+  RewriteRule ^([^/.]+)/([^/.]+)$ index.php/$1_$2 [QSA,L]
+  
 </IfModule>
